# passive-pr-fingerprinting-benchmark

./: .gitignore  CHANGELOG.md  CHART_REPRODUCTION_RUN_REPORT.md  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  IDENTIFIER_AUDIT.md  LICENSE  OPEN_SOURCE_AUDIT.md  PAPER_OUTPUTS.md  README.md  RELEASE_RUN_REPORT.md  RELEASE_VALIDATION.md  REPRODUCIBILITY.md  SECURITY.md  convert_pdf_figs_to_png.py  pyproject.toml  requirements-full.txt  requirements-tensorflow.txt  requirements.txt
.github/workflows/: ci.yml
configs/: experiment_config.py
data/: README.md
data/processed/: test_fingerprints.csv  train_fingerprints.csv
data/raw/: df_all.csv  test_df.csv
experiments/: run_all.py  run_ap_density_analysis.py  run_bootstrap_analysis.py  run_ensemble_benchmark.py  run_kwnn_benchmark.py  run_latency_benchmark.py  run_mlp_benchmark.py  run_summary.py  run_transformer_benchmark.py
paper_outputs/results/: chart_kalman_kwnn_comparison_df.csv  chart_kalman_kwnn_timed_comparison_df.csv  chart_kwnn_comparison_df.csv  (+10 more)
plots/: generate_all_plots.py  generate_paper_figures.py
results/: README.md  ap_density_full.csv  bootstrap_ci.csv  ensemble_benchmark.csv  latency_benchmark.csv  mlp_benchmark_quick.csv  mlp_benchmark_release.csv  transformer_benchmark_quick.csv  transformer_benchmark_release.csv
scripts/: check_chart_provenance.py  check_chart_reproduction.py  check_paper_outputs.py  check_repository.py  verify_release.py
src/: coordinate_mapping.py  data_loader.py  evaluation.py
tests/: test_data_integrity.py  test_optional_model_smoke.py  test_smoke_kwnn.py
(+51 files in other folders)
