[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passive-pr-fingerprinting-benchmark"
version = "1.0.0"
description = "Reproducible passive Wi-Fi probe-request fingerprinting localization benchmark."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "CC-BY-4.0"}
authors = [
  {name = "Ahmed Mansour"},
  {name = "Wu Chen"}
]
keywords = ["indoor localization", "Wi-Fi", "probe request", "fingerprinting", "benchmark"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "matplotlib>=3.6",
  "joblib>=1.2"
]

[tool.setuptools]
packages = ["src", "src.models", "src.utils", "configs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist"]
